--- a/statamic/_themes/main/templates/company.html
+++ b/statamic/_themes/main/templates/company.html
@@ -2,7 +2,7 @@
 <section class="bg-seafoam">
 	<div class="container">
 		<div class="company beliefs">
-			<span class="company-title">OUR BELIEFS</span>
+			<span class="section-title">OUR BELIEFS</span>
 			<div class="divider"></div>
 			<p class="intro-section">{{ beliefs }}</p>
 		</div>
@@ -10,7 +10,7 @@
 	<section>
 		<div class="container">
 			<div class="company why">
-				<span class="company-title">WHY GARFIELD</span>
+				<span class="section-title">WHY GARFIELD</span>
 				<div class="divider"></div>
 				{{ why }}
 				{{ why_grid }}
@@ -23,7 +23,7 @@
 	<section class="bg-gray">
 		<div class="container">
 			<div class="company inner-content">
-				<span class="company-title">OUR HISTORY</span>
+				<span class="section-title">OUR HISTORY</span>
 				<div class="divider"></div>
 				<h3>TOWNHOMES &amp; BUILDING SPECIALISTS SINCE 1972</h3>
 				<div class="divider"></div>
@@ -34,7 +34,7 @@
 	<section>
 		<div class="container">
 			<div class="company inner-content">
-				<span class="company-title">OUR INTERNATIONAL PARTNER</span>
+				<span class="section-title">OUR INTERNATIONAL PARTNER</span>
 				<div class="divider"></div>
 				<div>{{ theme:partial src="svg/beauchamp_logo" }}</div>
 				<div class="divider"></div>
