--- a/statamic/_themes/main/templates/neighborhood_individual.html
+++ b/statamic/_themes/main/templates/neighborhood_individual.html
@@ -30,7 +30,7 @@
 			<div class="grid numbers">
 				<div class="grid-6 full">
 					<h1>{{ left }}%</h1>
-					<h3>RISE IN PROPERTY PRICES IN THE LAST FIVE YEARS</h3>
+					<span class="price-descriptor">RISE IN PROPERTY PRICES IN THE LAST FIVE YEARS</span>
 					{{ theme:partial src="svg/graph" }}
 					<div class="divider"></div>
 				</div>
