--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -74,7 +74,10 @@ h4 {
 }
 
 h5 {
-    @include hlmedium($hFontM);
+    @include hsmedium($hFontM);
+    @include breakpoint($large) {
+        @include hlmedium($hFontM);
+    }
 }
 
 p {
@@ -114,7 +117,8 @@ p {
 }
 
 .section-title {
-    @include bbasebold;
+    @include hsmedium($bFont);
+    font-weight: 700;
     text-align: center;
 }
 // .container.large-body {
