--- a/src/scss/components/_by_the_numbers.scss
+++ b/src/scss/components/_by_the_numbers.scss
@@ -36,8 +36,9 @@
 		width: 100%;
 	}
 	.full {
-		padding: 0 $bPadding;
+		padding: 0 $bPadding/2;
 		@include breakpoint($medium) {
+			padding: 0 $bPadding;
 			.divider {
 				display: none;
 			}
@@ -63,8 +64,8 @@
 			&.tilted {
 				transform: rotate(-22deg);
 				color: white;
-				margin-right: 60px;
-				font-size: 30px;
+				margin-right: 70px;
+				font-size: 24px;
 			}
 		}
 		@include breakpoint($tiny) {
@@ -83,19 +84,36 @@
 	}
 	.price-descriptor {
 		font-family: $hFontB;
-		font-size: 13px;
+		font-size: 12px;
 		display: block;
 		text-align: center;
+		max-width: 80%;
+		text-align: center;
+		margin: 0 auto;
 		.first-letter {
 			font-family: $hFontB;
-			font-size: 17px;
+			font-size: 16px;
+		}
+		@include breakpoint($tiny) {
+			font-size: 14px;
+			.first-letter {
+				font-size: 18px;
+			}
+		}
+		@include breakpoint($large) {
+			font-size: 16px;
+			.first-letter {
+				font-size: 20px;
+			}
 		}
 	}
 	.divider {
-		@include gutters(.65 split);
+		width: 250px;
+		@include breakpoint($large) {
+			width: 400px;
+		}
 		position: relative;
-		margin-top: 30px;
-		margin-bottom: 30px;
+		margin: 30px auto;
 		height: 1px;
 		background-color: $dark-gray;
 	}
