--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -172,7 +172,11 @@ header {
 			display:block;
 			text-align: center;
 			color: white;
-			@include hmedium;
+			@include hsmedium($hFontM);
+			@include breakpoint($large) {
+				@include hmedium;
+			}
+			
 			padding-top: 20px;
 			padding-bottom: 20px;
 			&:last-of-type {
