--- a/src/scss/components/_blog_overview.scss
+++ b/src/scss/components/_blog_overview.scss
@@ -47,7 +47,7 @@
 	}
 	.blog-header {
 		color: darken($light-font-color,10%);
-		@include hbase($hFontM);
+		@include btiny($hFontM);
 		padding-bottom: .75em;
 		border-bottom: 1px solid $modal-text;
 		margin-bottom: 1.5em;
