--- a/statamic/_themes/main/partials/modal_listing.html
+++ b/statamic/_themes/main/partials/modal_listing.html
@@ -9,7 +9,7 @@
       <div class="modal-body">
         <h2>Schedule a Viewing</h2>
         <h3>Let us know what times work best for you and we'll try our best to make it happen</h3>
-        {{ raven:form formset="current_listing" attr="class:multi"}}
+        {{ raven:form formset="Property_Viewing_Requests" attr="class:multi"}}
         <div class="input-clear">
           <div class="form">
             <input class="input" placeholder="First &amp; Last Name" type="text" name="name">
