--- a/src/scss/modules/_featured_post.scss
+++ b/src/scss/modules/_featured_post.scss
@@ -17,7 +17,16 @@
 	}
 	h3 {
 		margin-bottom: .5em;
-		@include hxlarge($hFontMI);
+		@include hlarge;
+		@include breakpoint($large) {
+			@include hxlarge($hFontMI);
+		}
+	}
+	.truncated {
+		display: none;
+		@include breakpoint($small) {
+			display: block;
+		}
 	}
 	@include breakpoint($medium) {
 		height: 400px;
