--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -4777,8 +4777,8 @@ footer .footer-divider {
 .blog .blog-header {
   color: gray;
   font-family: "Copernicus-Medium";
-  font-size: 16px;
-  line-height: 26px;
+  line-height: 21px;
+  font-size: 14px;
   padding-bottom: .75em;
   border-bottom: 1px solid #CCCCCC;
   margin-bottom: 1.5em; }
@@ -4943,13 +4943,17 @@ footer .footer-divider {
 .categories {
   border-bottom: 1px solid #CCCCCC;
   margin-bottom: 30px;
-  padding-bottom: 1.5em; }
+  padding-bottom: .75em;
+  font-family: "Copernicus-Medium";
+  line-height: 21px;
+  font-size: 14px; }
 
 .categories .blog-header {
   border-bottom: none; }
 
 .categories li {
   text-transform: uppercase;
+  line-height: 21px;
   border-left: 1px solid #CCCCCC;
   padding: 0 10px; }
 
@@ -4961,7 +4965,14 @@ footer .footer-divider {
   margin: 30px 0; }
 
 .blog.blog-entry .blog-left h2 {
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  font-size: 28px;
+  line-height: 38px; }
+
+@media (min-width: 992px) {
+  .blog.blog-entry .blog-left h2 {
+    font-size: 50px;
+    line-height: 60px; } }
 
 .blog.blog-entry .blog-left p:first-of-type::first-letter {
   float: left;
@@ -6328,13 +6339,26 @@ section.faq {
 .featured h3 {
   margin-bottom: .5em;
   font-family: "Copernicus-MediumItalic";
-  font-size: 18px;
-  line-height: 27.9px; }
+  font-size: 28px;
+  line-height: 33.6px; }
 
-@media (min-width: 992px) {
+@media (min-width: 1280px) {
+  .featured h3 {
+    font-family: "Copernicus-MediumItalic";
+    font-size: 18px;
+    line-height: 27.9px; } }
+
+@media (min-width: 1280px) and (min-width: 992px) {
   .featured h3 {
     font-size: 34px;
     line-height: 52.7px; } }
+
+.featured .truncated {
+  display: none; }
+
+@media (min-width: 768px) {
+  .featured .truncated {
+    display: block; } }
 
 @media (min-width: 992px) {
   .featured {
