--- a/statamic/_themes/main/templates/contact.html
+++ b/statamic/_themes/main/templates/contact.html
@@ -17,7 +17,7 @@
 			<h3>Sales Enquiries</h3>
 			<!-- Begin MailChimp Signup Form -->
 			<div class="input-clear" id="mc_embed_signup">
-        {{ raven:form formset="contact" attr="method:post|id:mc-embedded-subscribe-form|name:mc-embedded-subscribe-form|class:multi|target:_blank" }}
+        {{ raven:form formset="General_Enquiries" attr="class:multi" }}
         <div class="form-full">
      			<input type="email" value="" placeholder="Email" name="EMAIL" class="input required email" id="mce-EMAIL">
      		</div>
@@ -27,9 +27,6 @@
         <div class="form-full">
         	<input type="text" value="" placeholder="Last Name" name="LNAME" class="input " id="mce-LNAME">
         </div>
-        <div class="form-full radio">
-        	<input type="checkbox" name="subscribe" value="Subscribe to email updates" id="subscribe"><span class="subscribe">Subscribe to email updates</span>
-        </div>
         <div class="form-full">
         	<input type="submit" value="SEND" name="subscribe" id="mc-embedded-subscribe" class="btn-garfield">
         </div>
@@ -38,8 +35,7 @@
 					<div class="response" id="mce-error-response" style="display:none"></div>
 					<div class="response" id="mce-success-response" style="display:none"></div>
 				</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-			    <div style="position: absolute; left: -5000px;"><input type="text" name="b_5645fb1229acab9604f9f450f_8327ab2928" tabindex="-1" value=""></div>
-					<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+
         {{ /raven:form }}
 			</div>
 	
