--- a/statamic/_themes/main/partials/modal_valuation.html
+++ b/statamic/_themes/main/partials/modal_valuation.html
@@ -9,7 +9,7 @@
       <div class="modal-body">
         <h2>More Than Mere Numbers</h2>
         <h3>Get in touch to make a more informed decision about your property with a Garfield Valuation</h3>
-        {{ raven:form formset="Valuation_Requests" }}
+        {{ raven:form formset="valuation_requests" }}
         <div class="input-clear">
           <div class="form">
             <input class="input" placeholder="Listing Address" type="text" name="address" value="{{ value:address }}">
