--- a/statamic/_themes/main/templates/contact.html
+++ b/statamic/_themes/main/templates/contact.html
@@ -17,7 +17,7 @@
 			<h3>Sales Enquiries</h3>
 			<!-- Begin MailChimp Signup Form -->
 			<div class="input-clear" id="mc_embed_signup">
-        {{ raven:form formset="General_Enquiries" attr="class:multi" }}
+        {{ raven:form formset="general_enquiries" attr="class:multi" }}
         <div class="form-full">
      			<input type="email" value="" placeholder="Email" name="EMAIL" class="input required email" id="mce-EMAIL">
      		</div>
