--- a/statamic/_themes/main/templates/reports.html
+++ b/statamic/_themes/main/templates/reports.html
@@ -48,7 +48,9 @@
 		    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email">
 		  </div>
 		  <div style="position: absolute; left: -5000px;"><input type="text" name="b_5645fb1229acab9604f9f450f_8327ab2928" tabindex="-1" value=""></div>
-		  <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-garfield">
+<div class="form-group half-span">
+	<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-garfield">
+</div>
         <div id="mce-responses" class="clear">
           <div class="response" id="mce-error-response" style="display:none"></div>
           <div class="response" id="mce-success-response" style="display:none"></div>
