--- a/statamic/_themes/main/templates/contact.html
+++ b/statamic/_themes/main/templates/contact.html
@@ -5,7 +5,7 @@
 			<div class="info">
 			<h3>Contact</h3>
 			<div>{{ theme:partial src="svg/phone" }}<span>{{ globals:phone }}</span></div>
-			<div><a href="{{ globals:email_contact }}">{{ theme:partial src="svg/mail" }}<span>{{ globals:email_contact }}</span></a></div>
+			<div><a href="{{ globals:email_contact }}">{{ theme:partial src="svg/mail" }}<span>{{ globals:email_info }}</span></a></div>
 			<br>
 			<div>{{ theme:partial src="svg/maps" }}<span>{{ globals:address_line1 }}</span></div>
 			<div class="line-two">{{ globals:address_line2 }}</div>
