--- a/statamic/_themes/main/partials/modal_listing.html
+++ b/statamic/_themes/main/partials/modal_listing.html
@@ -3,7 +3,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        {{ theme:partial src="svg/home_valuation" }}
+        {{ theme:partial src="svg/magnifying" }}
       </div>
 
       <div class="modal-body">
