--- a/statamic/_themes/main/templates/faq.html
+++ b/statamic/_themes/main/templates/faq.html
@@ -66,7 +66,7 @@
 			<h4>Don't hesitate to contact us</h4>
 			<ul>
 				<li>{{ theme:partial src="svg/phone" }} {{ globals:phone }}</li>
-				<li><a href="{{ globals:support_email }}">{{ theme:partial src="svg/mail" }}{{ globals:email_support }}</a></li>
+				<li><a href="{{ globals:info_email }}">{{ theme:partial src="svg/mail" }}{{ globals:email_support }}</a></li>
 			</ul>
 		</aside>
 	</div>
