--- a/statamic/_themes/main/templates/contact.html
+++ b/statamic/_themes/main/templates/contact.html
@@ -15,31 +15,27 @@
 
 			<div class="sales">
 			<h3>Sales Enquiries</h3>
-			<!-- Begin MailChimp Signup Form -->
-			<div class="input-clear" id="mc_embed_signup">
+			<div class="input-clear">
         {{ raven:form formset="general_enquiries" attr="class:multi" }}
-        <div class="form-full">
-     			<input type="email" value="" placeholder="Email" name="EMAIL" class="input required email" id="mce-EMAIL">
-     		</div>
      		<div class="form-full">
-        	<input type="text" value="" placeholder="First Name" name="FNAME" class="input " id="mce-FNAME">
+        	<input type="text" value="" placeholder="First Name" name="first_name" class="input">
         </div>
         <div class="form-full">
-        	<input type="text" value="" placeholder="Last Name" name="LNAME" class="input " id="mce-LNAME">
+        	<input type="text" value="" placeholder="Last Name" name="last_name" class="input">
         </div>
         <div class="form-full">
-        	<input type="submit" value="SEND" name="subscribe" id="mc-embedded-subscribe" class="btn-garfield">
+     			<input type="email" value="" placeholder="Email" name="email" class="input required email">
+     		</div>
+        <div class="form-full">
+     			<input type="text" value="" placeholder="Phone Number" name="phone" class="input">
+     		</div>
+        <div class="form-full">
+        	<input type="submit" value="SEND" name="subscribe" class="btn-garfield">
         </div>
 
-				<div id="mce-responses" class="clear">
-					<div class="response" id="mce-error-response" style="display:none"></div>
-					<div class="response" id="mce-success-response" style="display:none"></div>
-				</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 
         {{ /raven:form }}
 			</div>
-	
-			<!--End mc_embed_signup-->
 			</div>
 
 
