--- a/statamic/_themes/main/templates/properties.html
+++ b/statamic/_themes/main/templates/properties.html
@@ -7,11 +7,13 @@
       "{{ slug }}":
         {
           "title":"{{ title }}{{if apartment }}, {{ apartment }}{{ endif }}",
+          "datestamp": "{{ datestamp }}",
           "preview_image":"{{ preview_image }}",
           "url":"{{ url }}",
           "streeteasy_status": "{{ streeteasy_status }}",
           "openhouse": "{{ openhouse }}",
           "price": "{{ price }}",
+          "currency": "$",
           "property_type": "{{ property_type }}",
           "sqft": "{{ sqft }}",
           "property_location": "{{ property_location }}"
@@ -20,11 +22,13 @@
       "{{ slug }}":
         {
           "title":"{{ title }}{{if apartment }}, {{ apartment }}{{ endif }}",
+          "datestamp": "{{ datestamp }}",
           "preview_image":"{{ preview_image }}",
           "url":"{{ url }}",
           "streeteasy_status": "{{ streeteasy_status }}",
           "openhouse": "{{ openhouse }}",
           "price": "{{ price }}",
+          "currency": "$",
           "property_type": "{{ property_type }}",
           "sqft": "{{ sqft }}",
           "property_location": "{{ property_location }}"
@@ -39,6 +43,7 @@
       "{{ slug }}":
         {
           "title":"{{ title }}{{if apartment }}, {{ apartment }}{{ endif }}",
+          "datestamp": "{{ datestamp }}",
           "preview_image":"{{ preview_image }}",
           "url":"{{ url }}",
           "streeteasy_status": "{{ streeteasy_status }}",
@@ -52,6 +57,7 @@
       "{{ slug }}":
         {
           "title":"{{ title }}{{if apartment }}, {{ apartment }}{{ endif }}",
+          "datestamp": "{{ datestamp }}",
           "preview_image":"{{ preview_image }}",
           "url":"{{ url }}",
           "streeteasy_status": "{{ streeteasy_status }}",
@@ -66,4 +72,49 @@
     {{ /entries:listing}}
   }
 </script>
+{{ if get:view != "map" }}
 <div id="properties"></div>
+{{ else }}
+<div class="property_nav dark_gray leading properties_grid">
+	<div class="container">
+		<div class="rent-or-buy">
+			<ul>
+				<li><a href="{{ url }}?type=buy" class="{{ if get:type != "rent" }}active{{ endif }}">Buy</a></li>
+				<li><a href="{{ url }}?type=rent" class="{{ if get:type == "rent" }}active{{ endif }}"> Rent</a></li>
+			</ul>
+		</div>
+      <div class='view-type'>
+        <ul class='views'>
+          <li>
+            <a href="{{ url }}"><i class='fa fa-th-large'></i>Grid View</a>
+          </li>
+          <li>
+            <a class="active" id="map-link"><i class='fa fa-map-marker'></i>Map View</a>
+          </li>
+        </ul>
+      </div>
+	</div>
+</div>
+<section class="bg-gray">
+	<div class="container">
+		{{ if get:type == "rent" }}
+
+		{{ entries:listing folder="properties/new-york/rental" sort_by="price" sort_dir="desc"}}
+		{{ theme:partial src="property_card" use_context="true" }}
+		{{ /entries:listing}}
+
+		{{ else }}
+
+
+			<div class="big-map">
+				{{ location:map_listing folder="properties/new-york/sale" locate_with="location" }}
+					<h3><a href="{{url}}">{{ title }}</a></h3>
+					<p>{{ comment }}</p>
+				{{ /location:map_listing }}
+			</div>
+
+		{{ endif }}
+	<div>
+</section>
+{{ endif }}
+
