--- a/statamic/_themes/main/templates/properties.html
+++ b/statamic/_themes/main/templates/properties.html
@@ -1,6 +1,10 @@
+
+{{ var:my_date_since }}{{ date_calc start_date="{current_date}" method="subDays" value="30" format="F d, Y" }}{{ /var:my_date_since }}
+
 <script type="text/javascript">
+
   var data = {
-    {{ entries:listing folder="properties/new-york/sale"  }}
+    {{ entries:listing folder="properties/new-york/sale" conditions="streeteasy_status:active||in-contract" show_future="true" }}
     {{ if first }}
     "sale": {
     {{ endif }}
@@ -18,7 +22,9 @@
           "sqft": "{{ sqft }}",
           "property_location": "{{ property_location }}"
         },
-    {{ if last }}
+    {{ /entries:listing}}
+    {{ entries:listing folder="properties/new-york/sale" conditions="streeteasy_status:sold" show_future="true" since="{var:my_date_since}" }}
+    {{ if !no_results }}
       "{{ slug }}":
         {
           "title":"{{ title }}{{if apartment }}, {{ apartment }}{{ endif }}",
@@ -31,12 +37,13 @@
           "currency": "$",
           "property_type": "{{ property_type }}",
           "sqft": "{{ sqft }}",
+          "results": "{{ total_results }}",
           "property_location": "{{ property_location }}"
-        }
-    },
-    {{ endif }}
+        },
+     {{ endif 	}}
     {{ /entries:listing}}
-    {{ entries:listing folder="properties/new-york/rental"  }}
+  	},
+    {{ entries:listing folder="properties/new-york/rental" conditions="streeteasy_status:active||in-contract" show_future="true" }}
     {{ if first }}
     "lease": {
     {{ endif }}
@@ -49,11 +56,15 @@
           "streeteasy_status": "{{ streeteasy_status }}",
           "openhouse": "{{ openhouse }}",
           "price": "{{ price }}",
+          "currency": "$",
           "property_type": "{{ property_type }}",
           "sqft": "{{ sqft }}",
+          "results": "{{ total_results }}",
           "property_location": "{{ property_location }}"
         },
-    {{ if last }}
+    {{ /entries:listing}}
+    {{ entries:listing folder="properties/new-york/rental" since="{ var:my_date_since }" conditions="streeteasy_status:leased" show_future="true" }}
+    	{{ if !no_results }}
       "{{ slug }}":
         {
           "title":"{{ title }}{{if apartment }}, {{ apartment }}{{ endif }}",
@@ -63,13 +74,15 @@
           "streeteasy_status": "{{ streeteasy_status }}",
           "openhouse": "{{ openhouse }}",
           "price": "{{ price }}",
+          "currency": "$",
           "property_type": "{{ property_type }}",
           "sqft": "{{ sqft }}",
+          "results": "{{ total_results }}",
           "property_location": "{{ property_location }}"
-        }
-    }
-    {{ endif }}
+        },
+     	{{ endif }}
     {{ /entries:listing}}
+  	}
   }
 </script>
 {{ if get:view != "map" }}
