--- a/statamic/_themes/main/templates/agent_individual.html
+++ b/statamic/_themes/main/templates/agent_individual.html
@@ -13,7 +13,7 @@
 
 		<main>
 			<div class="agent-info">
-				<h2>{{ title }}</h2>
+				<h2 class="agent-title">{{ title }}</h2>
 				{{ info }}
 			</div>
 
