--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -4120,13 +4120,16 @@ footer .footer-divider {
   padding-left: 1.11111%;
   padding-right: 1.11111%; }
 
-.agent-individual main .agent-title {
+.agent-individual main h2.agent-title {
   display: none; }
 
 @media (min-width: 992px) {
-  .agent-individual main .agent-title {
-    margin-top: 60px;
+  .agent-individual main h2.agent-title {
+    margin-bottom: 30px;
     display: block; } }
+
+.agent-individual main h2 {
+  margin-bottom: 30px; }
 
 .agent-individual main p:first-of-type, .agent-individual main span:first-of-type {
   margin-top: 0; }
