--- a/statamic/_themes/main/templates/contact.html
+++ b/statamic/_themes/main/templates/contact.html
@@ -16,7 +16,10 @@
 			<div class="sales">
 			<h3>Sales Enquiries</h3>
 			<div class="input-clear">
-        {{ raven:form formset="general_enquiries" attr="class:multi" }}
+        {{ raven:form formset="general_enquiries" attr="class:multi" return="/success"}}
+        {{ if {raven:success} }}
+<h1>Good job, son!</h1>
+{{ endif }}
      		<div class="form-full">
         	<input type="text" value="" placeholder="First Name" name="first_name" class="input">
         </div>
