--- a/statamic/_themes/main/templates/neighborhood_individual.html
+++ b/statamic/_themes/main/templates/neighborhood_individual.html
@@ -78,7 +78,7 @@
 			<div class="section-title">CURRENT PROPERTIES IN THIS NEIGHBORHOOD</div>
 			{{ entries:listing folder="properties/new-york/sale|properties/new-york/rental" conditions="property_location:{title}, streeteasy_status:active||in-contract" }}
 			{{ if no_results }}
-			<p class="no_results">We are currently have no other properties for sale or lease in this neighborhood. Be sure to check back soon.</p>
+			<p class="no_results">We currently have no other properties for sale or lease in this neighborhood. Be sure to check back soon.</p>
 			{{ else }}
 			{{ if first }}
 			<div class="property_tile">
